--- a/package.json
+++ b/package.json
@@ -20,12 +20,19 @@
   },
   "homepage": "https://github.com/nbanx/ballast#readme",
   "devDependencies": {
+    "css-mqpacker": "^6.0.2",
     "gulp": "^4.0.0",
+    "gulp-autoprefixer": "^5.0.0",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-notify": "^3.2.0",
+    "gulp-plumber": "^1.2.0",
+    "gulp-postcss": "^7.0.1",
+    "gulp-rename": "^1.2.3",
     "gulp-sass": "^4.0.1",
+    "gulp-sass-lint": "^1.3.4",
+    "gulp-sourcemaps": "^2.6.4",
     "node-bourbon": "^4.2.8",
-    "node-neat": "^2.0.0-beta.0"
-  },
-  "dependencies": {
+    "node-neat": "^2.0.0-beta.0",
     "sass-rem": "^2.0.1"
   }
 }
