--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "url": "git+https://github.com/nbanx/ballast.git"
   },
   "author": "Trevor Caudill",
-  "license": "GPL",
+  "license": "GPL-2.0",
   "bugs": {
     "url": "https://github.com/nbanx/ballast/issues"
   },
@@ -23,6 +23,7 @@
     "css-mqpacker": "^6.0.2",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^5.0.0",
+    "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.3",
     "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.0",
@@ -31,8 +32,10 @@
     "gulp-sass": "^4.0.1",
     "gulp-sass-lint": "^1.3.4",
     "gulp-sourcemaps": "^2.6.4",
+    "gulp-uglify": "^3.0.0",
     "node-bourbon": "^4.2.8",
     "node-neat": "^2.0.0-beta.0",
+    "pump": "^3.0.0",
     "sass-rem": "^2.0.1"
   }
 }
